@@ -105,6 +105,7 @@ return array(
 	'tx_solr_responseprocessor' => $extensionPath . 'interfaces/interface.tx_solr_responseprocessor.php',
 	'tx_solr_resultdocumentmodifier' => $extensionPath . 'interfaces/interface.tx_solr_resultdocumentmodifier.php',
 	'tx_solr_resultsetmodifier' => $extensionPath . 'interfaces/interface.tx_solr_resultsetmodifier.php',
+	'tx_solr_subpartviewhelper' => $extensionPath . 'interfaces/interface.tx_solr_subpartviewhelper.php',
 	'tx_solr_substitutepageindexer' => $extensionPath . 'interfaces/interface.tx_solr_substitutepageindexer.php',
 	'tx_solr_templatemodifier' => $extensionPath . 'interfaces/interface.tx_solr_templatemodifier.php',
 	'tx_solr_viewhelper' => $extensionPath . 'interfaces/interface.tx_solr_viewhelper.php',
