@@ -9,6 +9,7 @@
 	* Added refactored facet renderer architecture to allow custom facet renderers
 	* Added support for multi / single value field auto-detection in field processors
 	* Added refactored structure for query filter parsers and query modifiers
+	* Added support for subpart viewhelpers
 
 2011-01-31  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
